--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     <title></title>
   </head>
   <body>
-<div class='top'>
-  <img src='assets/Orn1.svg' class='design' >
-  <span class='hi'>HI</span>
-  <span class='txtt'>I AM RAGHAVENDRA P JADHAV</span>
-  <span class='ima'>I AM A</span>
-  <span class='dtl'>MECHANICAL ENGINEER <br>
-    CAD DESIGNER <br>
-    WEB DEVELOPER <br>
-    HOBBY CODER</span>
-  <img src='assets/Group.svg' class='image2' >
-  <img src='assets/saly-10.svg' class='image1' >
-</div>
+    <div class='top'>
+      <img src='assets/Orn1.svg' class='design' >
+      <span class='hi'>HI</span>
+      <span class='txtt'>I AM RAGHAVENDRA P JADHAV</span>
+      <span class='ima'>I AM A</span>
+      <span class='dtl'>MECHANICAL ENGINEER <br>
+        CAD DESIGNER <br>
+        WEB DEVELOPER <br>
+        HOBBY CODER</span>
+      <img src='assets/Group.svg' class='image2' >
+      <img src='assets/saly-10.svg' class='image1' >
+      <img src='assets/elps.svg' class='shdw' >
+
+    </div>
   </body>
 </html>
