--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         WEB DEVELOPER <br>
         HOBBY CODER</span>
       <img src='assets/Group.svg' class='image2' >
-      <img src='assets/saly-10.svg' class='image1' >
+      <img src='assets/Saly-10.png' class='image1' >
       <img src='assets/elps.svg' class='shdw' >
 
     </div>
