Scroll Bar Modified

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img src='assets/Saly-13.png' class='image3' >
       <img src='assets/pg2dt.svg' class='text2' >
       <img src='assets/coding.svg' class='cdsy' >
-
+      <img src='assets/clcls.svg' class='cir' >
     </div>
 
   </body>
