--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
       <img src='assets/Group.svg' class='image2' >
       <img src='assets/Saly-10.png' class='image1' >
       <img src='assets/elps.svg' class='shdw' >
+      <img src='assets/backdes.png' class='p2' >
       <img src='assets/Saly-13.png' class='image3' >
       <img src='assets/pg2dt.svg' class='text2' >
       <img src='assets/coding.svg' class='cdsy' >
       <img src='assets/clcls.svg' class='cir' >
+      <img src='assets/arrows.png' class='arrow' >
+      <img src='assets/p3txt.svg' class='t3' >
+      <img src='assets/backdes.png' class='p3' >
+      <img src='assets/p3img.png' class='i3' >
+
     </div>
 
   </body>
