--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="assets/sty.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet">
@@ -25,11 +25,16 @@
       <img src='assets/Orn1.svg' class='design' >
       <span class='hi'>HI</span>
       <span class='txtt'>I AM RAGHAVENDRA P JADHAV</span>
-      <span class='ima'>I AM A</span>
-      <span class='dtl'>MECHANICAL ENGINEER <br>
-        CAD DESIGNER <br>
-        WEB DEVELOPER <br>
-        HOBBY CODER</span>
+    <div class="wrapper">
+    <div class="static-txt">I AM A </div>
+    <ul class="dynamic-txts">
+      <li><span>MECHANICAL ENGINEER</span></li>
+      <li><span>CAD DESIGNER</span></li>
+      <li><span>WEB DEVELOPER</span></li>
+      <li><span>HOBBY CODER</span></li>
+    </ul>
+  </div>
+
       <img src='assets/Group.svg' class='image2' >
       <img src='assets/Saly-10.png' class='image1' >
       <img src='assets/elps.svg' class='shdw' >
