--- a/test.html
+++ b/test.html
@@ -2,17 +2,53 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/sty.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="manifest" href="icons/site.webmanifest">
+    <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title></title>
-  <link rel="stylesheet" href="assets\css\bootstrap.css">
   </head>
   <body>
-  <div class ="row">
-    <div class="col">
-      HI
+    <div class='top'>
+      <img src='assets/Orn1.svg' class='design' >
+      <span class='hi'>HI</span>
+      <span class='txtt'>I AM RAGHAVENDRA P JADHAV</span>
+    <div class="wrapper">
+    <div class="static-txt">I AM A </div>
+    <ul class="dynamic-txts">
+      <li><span>MECHANICAL ENGINEER</span></li>
+      <li><span>CAD DESIGNER</span></li>
+      <li><span>WEB DEVELOPER</span></li>
+      <li><span>HOBBY CODER</span></li>
+    </ul>
+  </div>
+
+      <img src='assets/Group.svg' class='image2' >
+      <img src='assets/Saly-10.png' class='image1' >
+      <img src='assets/elps.svg' class='shdw' >
+      <img src='assets/backdes.png' class='p2' >
+      <img src='assets/Saly-13.png' class='image3' >
+      <img src='assets/pg2dt.svg' class='text2' >
+      <img src='assets/coding.svg' class='cdsy' >
+      <img src='assets/clcls.svg' class='cir' >
+      <img src='assets/arrows.png' class='arrow' >
+      <img src='assets/p3txt.svg' class='t3' >
+      <img src='assets/backdes.png' class='p3' >
+      <img src='assets/p3img.png' class='i3' >
+
     </div>
-    <div class="col-lg-3">
-      HEY
-    </div>
-    </div>
+
   </body>
 </html>
