--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       <img src='assets/p3txt.svg' class='t3' >
       <img src='assets/backdes.png' class='p3' >
       <img src='assets/p3img.png' class='i3' >
+      <div id="particles-js"></div>
+      <script type="text/javascript" scr="assets/particles.js"></script>
+      <script type="text/javascript" scr="assets/app.js"></script>
     </div>
+
   </body>
 </html>
