--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <script type="text/javascript" src="assets/particles.js"></script>
+    <script type="text/javascript" src="assets/app.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/styles.css">
@@ -21,6 +23,7 @@
     <title></title>
   </head>
   <body>
+    <div id="particles-js">
     <div class='top'>
       <img src='assets/Orn1.svg' class='design' >
       <span class='hi'>HI</span>
@@ -47,10 +50,9 @@
       <img src='assets/p3txt.svg' class='t3' >
       <img src='assets/backdes.png' class='p3' >
       <img src='assets/p3img.png' class='i3' >
-      <div id="particles-js"></div>
-      <script type="text/javascript" scr="assets/particles.js"></script>
-      <script type="text/javascript" scr="assets/app.js"></script>
+      </div>
     </div>
-
+    <script type="text/javascript" src="assets/particles.js"></script>
+    <script type="text/javascript" src="assets/app.js"></script>
   </body>
 </html>
